project(GENETRAIL2_LIBRARIES)

if(Boost_FOUND)
	add_subdirectory(core)
	add_subdirectory(cluster)
	if(SEQAN_FOUND)
		add_subdirectory(sequencing)
	else()
		message(STATUS "SeqAn libraries not found, cannot build sequencing library")
		return()
	endif()
else()
	message(STATUS "Boost libraries not found, cannot build any library")
	return()
endif()
